--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/postcss": "^4.1.5",
     "axios": "^1.9.0",
+    "framer-motion": "^12.12.1",
     "mark.js": "^8.11.1",
     "postcss-cli": "^11.0.1",
     "react": "^19.1.0",
