--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/postcss": "^4.1.5",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "mark.js": "^8.11.1",
     "postcss-cli": "^11.0.1",
