Added React-router dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "mark.js": "^8.11.1",
     "postcss-cli": "^11.0.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
