--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "postcss-cli": "^11.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
